# aws-mlops

./: .gitignore  Dockerfile  README.md  appspec.yml  buildspec.yml  docker-compose.yml  pyproject.toml
Notes/: EC2_Data_Source  codebuil-project.json
configs/: python-app.service
scripts/: after_install.sh  install_dependencies.sh  start_application.sh  stop_aplication.sh
src/app/: app.py
src/etl/: load_data.py
src/model/: model.py  training.py
test/: conftest.py  test_app.py  test_etl.py  test_model.py
