[tool.poetry]
name = "aws-mlops"
version = "0.1.0"
description = ""
authors = ["Omar Andres Castaño <omar.castano@udea.edu.co>"]
readme = "README.md"
packages = [{include="src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
nest-asyncio = "^1.6.0"
boto3 = "^1.35.22"
fsspec = "^2024.10.0"
s3fs = "^2024.10.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
ipykernel = "^6.29.5"
coverage = "^7.6.4"
httpx = "^0.27.2"
moto = "^5.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
